Fixing css and connect to MongoDB

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/KrisstinaAsenova/ReactCourse-HandmadeByRossieShop#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
